# dual-path-rnn

./: .gitignore  README.md  pyproject.toml
exp/pretrained/: config.py
src/: data.py  evaluate.py  loss.py  network.py  run_experiment.py  separate.py  train.py  utils.py
